--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, h6 {
 
 <!-- Footer -->
 <footer class="w3-center w3-light-grey w3-padding-32">
-  <p>Created by <a href="https://www.w3schools.com/w3css/default.asp" title="Farhan Bramhatchi" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Created by <a href="http://127.0.0.1:5500/index.html" title="Farhan Bramhatchi" target="_blank" class="Farhan Bramhatchi-hover-text-green">Farhan Bramhatchi</a></p>
 </footer>
 
 </body>
